--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2024"
 actix-cors = "0.7.1"
 actix-web = "4.4.0"
 derive_more = { version = "2.1.1", features = ["display"] }
+dotenvy = "0.15.7"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
+sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
