--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -1,13 +1,11 @@
 [package]
 name = "chess"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 actix-cors = "0.7.1"
 actix-web = "4.4.0"
-derive_more = { version = "2.1.1", features = ["display"] }
-dotenvy = "0.15.7"
-serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.149"
-sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
+shakmaty = "0.26"
