--- a/application/package.json
+++ b/application/package.json
@@ -24,7 +24,9 @@
     "@tanstack/solid-router-devtools": "^1.133.20",
     "@tanstack/solid-router-ssr-query": "^1.132.25",
     "@tanstack/solid-start": "^1.132.25",
+    "@types/better-sqlite3": "^7.6.13",
     "better-auth": "^1.4.12",
+    "better-sqlite3": "^12.6.2",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "lucide-solid": "^0.544.0",
